:art: User creation-Keycloak connectivity is updated to grant new users the offline-access realm role, so that they can use the refresh token feature.